# a5-1-rhdl

./: .gitignore  Cargo.toml  README.adoc  README.md  flake.nix  shift_register.v  shift_register.vcd
src/: adder.rs  chasing_lights.rs  clock_thing.rs  inverter.rs  jkff.rs  main.rs  oneshot_sim.rs  rhdl_blinker_test.rs  shift_register.rs  start_pulse.rs  sum_accumulator.rs  uart.rs
src/uart/: uart_receiver.rs  uart_receiver.vhdl  uart_sender.rs  uart_sender.vhdl
